-------------------------------------------------------------------------------
  Version 20221011 (2022-10-11)
-------------------------------------------------------------------------------
  * Updated mastodon server

-------------------------------------------------------------------------------
  Version 20220621 (2022-06-21)
-------------------------------------------------------------------------------
  * Added footer

-------------------------------------------------------------------------------
  Version 20220504 (2022-05-04)
-------------------------------------------------------------------------------
  * Added favicon

-------------------------------------------------------------------------------
  Version 20220415 (2022-04-15)
-------------------------------------------------------------------------------
  * Use bold fonts in menu 

-------------------------------------------------------------------------------
  Version 20210720 (2021-07-20)
-------------------------------------------------------------------------------
  * Fixed spelling

-------------------------------------------------------------------------------
  Version 20210614 (2021-06-14)
-------------------------------------------------------------------------------
  * Updated screenshot
  * Added Patreon
  
-------------------------------------------------------------------------------
  Version 20210206 (2021-02-06)
-------------------------------------------------------------------------------
  * Added Reddit to menu
  * Moved data files to a subdirectory

-------------------------------------------------------------------------------
  Version 20201108 (2020-11-08)
-------------------------------------------------------------------------------
  * Initial release