@@ -29,11 +29,12 @@
 <div class="footer">
   <div class="scrollmenu">
   <a href="https://www.facebook.com/groups/SparkyLinux/">Facebook</a>  
-  <a href="https://twitter.com/SparkyLinux">Twitter</a>
-  <a href="https://mewe.com/join-front/sparkylinux">MeWe</a>
+  <a href="https://x.com/SparkyLinux">X</a>
+  <a href="https://mewe.com/join/sparkylinux">MeWe</a>
   <a href="https://t.me/sparkylinux">Telegram</a>
-  <a href="https://www.reddit.com/r/SparkyLinux/">Reddit</a>
+  <a href="https://www.reddit.com/r/SparkyLinuxOrg/">Reddit</a>
   <a href="https://mastodon.social/@SparkyLinux">Mastodon</a>
+  <a href="https://signal.group/#CjQKIJTIFdCzG2za1ZC8TE8dxOkeMB_Q03oPTpddsEiVXtHdEhBZs7BP9ItOowNXF6J7GF4A">Signal</a>
   <a href="https://www.patreon.com/sparkylinux">Patreon</a>
   </div>
 </div>
