@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20240608 (2024-06-08)
+-------------------------------------------------------------------------------
+  * Updated Reddit and MeWe links
+  * Added Signal
+
+-------------------------------------------------------------------------------
   Version 20221011 (2022-10-11)
 -------------------------------------------------------------------------------
   * Updated mastodon server
